<resources>
    <string name="title_activity_grupo_menu">GrupoMenuActivity</string>
    <string name="title_activity_tipo_grupo_menu">TipoGrupoMenuActivity</string>
    <string name="title_activity_escuela_menu">EscuelaMenuActivity</string>
    <string name="title_activity_asignatura_menu">AsignaturaMenuActivity</string>
    <string name="title_activity_horario_menu">HorarioMenuActivity</string>
    <string name="grupo_menu">Función a Ejecutar Grupo</string>
    <string name="tipo_grupo_menu">Función a Ejecutar Tipo Grupo</string>
    <string name="asignatura_menu">Función a Ejecutar Asignatura</string>
    <string name="escuela_menu">Función a Ejecutar Escuela</string>
    <string name="insertar_registro">Insertar Registro</string>
    <string name="eliminar_registro">Eliminar Registro</string>
    <string name="consultar_registro">Consultar Registro</string>
    <string name="actualizar_registro">Actualizar Registro</string>
    <string name="title_activity_grupo_insertar">GrupoInsertarActivity</string>
    <string name="title_activity_grupo_eliminar">GrupoEliminarActivity</string>
    <string name="title_activity_grupo_actualizar">GrupoActualizarActivity</string>
    <string name="title_activity_grupo_consultar">GrupoConsultarActivity</string>
    <string name="id_grupo">ID GRUPO</string>
    <string name="id_tipo_grupo_fk">ID Tipo Grupo</string>
    <string name="id_asignatura_fk">ID Asignatura</string>
    <string name="id_docente">ID Docente</string>
    <string name="num_grupo">Numero de grupo</string>
    <string name="estado_grupo">Estado Grupo</string>
    <string name="title_activity_tipo_grupo_insertar">TipoGrupoInsertarActivity</string>
    <string name="title_activity_tipo_grupo_eliminar">TipoGrupoEliminarActivity</string>
    <string name="title_activity_tipo_grupo_actualizar">TipoGrupoActualizarActivity</string>
    <string name="title_activity_tipo_grupo_consultar">TipoGrupoConsultarActivity</string>
    <string name="id_tipo_grupo">ID Tipo Grupo</string>
    <string name="nombre_tipo_grupo">Nombre Tipo de Grupo</string>
    <string name="Estado_tipo_grupo">Estado Tipo de Grupo</string>
    <string name="title_activity_asignatura_insertar">AsignaturaInsertarActivity</string>
    <string name="title_activity_asignatura_eliminar">AsignaturaEliminarActivity</string>
    <string name="title_activity_asignatura_actualizar">AsignaturaActualizarActivity</string>
    <string name="title_activity_asignatura_consultar">AsignaturaConsultarActivity</string>
    <string name="id_asignatura">ID Asignatura</string>
    <string name="id_escuela_fk">ID Escuela</string>
    <string name="nombre_asignatura">Nombre de Asignatura</string>
    <string name="codigo_asignatura">Codigo de Asignatura</string>
    <string name="estado_asignatura">Estado de Asignatura</string>
    <string name="title_activity_escuela_insertar">EscuelaInsertarActivity</string>
    <string name="title_activity_escuela_eliminar">EscuelaEliminarActivity</string>
    <string name="title_activity_escuela_actualizar">EscuelaActualizarActivity</string>
    <string name="title_activity_escuela_consultar">EscuelaConsultarActivity</string>
    <string name="id_escuela">ID Escuela</string>
    <string name="nombre_escuela">Nombre de Escuela</string>
    <string name="prioridad_escuela">Prioridad de Escuela</string>
    <string name="estado_escuela">Estado de Escuela</string>
    <string name="app_name">Horarios</string>
    <string name="bar_title">Consulta Horarios</string>
    <string name="menu_item_one">Perfil</string>
    <string name="menu_item_two">Acerca de nosotros</string>
    <string name="menu_item_three">Cerrar sesion</string>
    <string name="menu_item_fourth">Materias</string>
    <string name="open_menu">Menu</string>
    <string name="closed_menu">Cerrar</string>
    <string name="text_title_events">Eventos</string>
    <string name="text_helper_events">No hay eventos</string>
    <string name="card_item_one">Horarios</string>
    <string name="card_item_two">Eventos</string>
    <string name="card_item_three">Solicitudes</string>
    <string name="title_activity_tipo_evento_insertar">TipoEventoInsertarActivity</string>
    <string name="title_activity_tipo_evento_eliminar">TipoEventoEliminarActivity</string>
    <string name="title_activity_tipo_evento_actualizar">TipoEventoActualizarActivity</string>
    <string name="title_activity_tipo_evento_consultar">TipoEventoConsultarActivity</string>
    <string name="id_tipo_evento">ID tipo Evento</string>
    <string name="nombre_tipo_evento">Nombre del tipo de evento</string>
    <string name="estado_tipo_evento">Estado del tipo de evento</string>
    <string name="title_activity_evento_insertar">EventoInsertarActivity</string>
    <string name="title_activity_evento_eliminar">EventoEliminarActivity</string>
    <string name="title_activity_evento_actualizar">EventoActualizarActivity</string>
    <string name="title_activity_evento_consultar">EventoConsultarActivity</string>
    <string name="id_evento">ID Evento</string>
    <string name="nombre_evento">Nombre del evento</string>
    <string name="estado_evento">Estado del evento</string>
    <string name="tipo_evento">tipo de evento</string>
    <string name="title_activity_tipo_salon_insertar">TipoSalonInsertarActivity</string>
    <string name="title_activity_tipo_salon_eliminar">TipoSalonEliminarActivity</string>
    <string name="title_activity_tipo_salon_actualizar">TipoSalonActualizarActivity</string>
    <string name="title_activity_tipo_salon_consultar">TipoSalonConsultarActivity</string>
    <string name="id_tipo_salon">ID Tipo Salon</string>
    <string name="nombre_tipo_salon">Nombre del tipo de salon</string>
    <string name="disponible_tipo_salon">Disponibilidad del tipo de salon</string>
    <string name="codigo_tipo_salon">Codigo del tipo de salon</string>
    <string name="estado_tipo_salon">Estado del tipo de salon</string>
    <string name="title_activity_salon_insertar">SalonInsertarActivity</string>
    <string name="title_activity_salon_eliminar">SalonEliminarActivity</string>
    <string name="title_activity_salon_actualizar">SalonActualizarActivity</string>
    <string name="title_activity_salon_consultar">SalonConsultarActivity</string>
    <string name="id_salon">ID Salon</string>
    <string name="nombre_salon">Nombre del salon</string>
    <string name="capacidad">Capacidad</string>
    <string name="codigo_salon">Codigo del salon</string>
    <string name="disponible_salon">Disponibilidad del salon</string>
    <string name="title_activity_distribucion_hora_insertar">DistribucionHoraInsertarActivity</string>
    <string name="title_activity_distribucion_hora_eliminar">DistribucionHoraEliminarActivity</string>
    <string name="title_activity_distribucion_hora_actualizar">DistribucionHoraActualizarActivity</string>
    <string name="title_activity_distribucion_hora_consultar">DistribucionHoraConsultarActivity</string>
    <string name="id_distribucion_hora">ID Distribucion de Hora</string>
    <string name="hora_inicio">Hora Inicio</string>
    <string name="hora_fin">Hora Fin</string>
    <string name="dia">Dia</string>
    <string name="estado_distribucion_hora">Estado de la Distribucion de Hora</string>
    <string name="btn_insertar">Insertar</string>
    <string name="btn_consultar">Consultar</string>
    <string name="btn_limpiar">Limpiar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_actualizar">Actualizar</string>
    <string name="menu_item_five">Tipo eventos</string>
    <string name="menu_item_six">Docentes</string>
    <string name="title_activity_horario_actualizar">HorarioActualizarActivity</string>
    <string name="title_activity_horario_consultar">HorarioConsultarActivity</string>
    <string name="title_activity_horario_insertar">HorarioInsertarActivity</string>
    <string name="title_activity_horario_eliminar">HorarioEliminarActivity</string>
    <string name="id_horario">ID Horario</string>
    <string name="id_solicitud_evento_fk">ID Solicitud Evento </string>
    <string name="id_solicitud_horario_fk">ID Solicitud Horario</string>
    <string name="title_activity_estado_horario_actualizar">EstadoHorarioActualizarActivity</string>
    <string name="title_activity_estado_horario_consultar">EstadoHorarioConsultarActivity</string>
    <string name="title_activity_estado_horario_insertar">EstadoHorarioInsertarActivity</string>
    <string name="title_activity_estado_horario_eliminar">EstadoHorarioEliminarActivity</string>
    <string name="id_estado_horario">ID Estado Horario</string>
    <string name="id_horario_fk">ID Horario</string>
    <string name="nombre_estado_horario">Nombre Estado Horario</string>
    <string name="estado">Estado</string>
    <string name="title_activity_ciclo_academico_actualizar">CicloAcademicoActualizarActivity</string>
    <string name="title_activity_ciclo_academico_consultar">CicloAcademicoConsultarActivity</string>
    <string name="title_activity_ciclo_academico_insertar">CicloAcademicoInsertarActivity</string>
    <string name="title_activity_ciclo_academico_Eliminar">CicloAcademicoEliminarActivity</string>
    <string name="id_ciclo_academico">ID Ciclo Academico</string>
    <string name="id_tipo_ciclo_fk">ID Tipo Ciclo</string>
    <string name="inicio_ciclo_academico">Inicio Ciclo Academico</string>
    <string name="fin_ciclo_academico">Fin Ciclo Academico</string>
    <string name="anio_ciclo_academico">Anio Ciclo Academico</string>
    <string name="estado_ciclo_academico">Estado Ciclo Academico</string>
    <string name="title_activity_tipo_ciclo_actualizar">TipoCicloActualizarActivity</string>
    <string name="title_activity_tipo_ciclo_consultar">TipoCicloConsultarActivity</string>
    <string name="title_activity_tipo_ciclo_insertar">TipoCicloInsertarActivity</string>
    <string name="title_activity_tipo_ciclo_eliminar">TipoCiclooEliminarActivity</string>
    <string name="id_tipo_ciclo">ID Tipo Ciclo</string>
    <string name="nombre_tipo_ciclo">nombre Tipo Ciclo</string>
    <string name="estado_tipo_ciclo">Estado Tipo Ciclo</string>
    <string name="seleccine">seleccine:</string>
    <string name="seleccine_solicitud_horario">seleccine solicitud horario:</string>
    <string name="seleccine_solicitud_evento">seleccine solicitud evento</string>
    <string name="error_intent_load">No se pudo cargar el recurso</string>
    <string name="title_activity_insert_docente">Agregar nuevo docente</string>
    <string name="text_first_name_teacher">Primer nombre</string>
    <string name="text_second_name_teacher">Segundo nombre</string>
    <string name="text_first_lastname_teacher">Primer apellido</string>
    <string name="text_second_lastname_teacher">Segundo apellido</string>
    <string name="text_profesion_teacher">Titulo</string>
    <string name="text_state_teacher">Estado</string>
    <string name="opciones">Opciones</string>
    <string name="text_search_teacher">ID Docente</string>
    <string name="text_lastname_married">Apellido de casada</string>
    <string name="title_activity_delete_teacher">Eliminar Docente</string>
    <string name="title_activity_update_teacher">Actualizar docente</string>
    <string name="title_activity_query_teacher">Consultar docente</string>
    <string name="item_status_enable">Activo</string>
    <string name="item_status_innactive">Inactivo</string>
    <string name="menu_item_seven">Tipo Funcion</string>
    <string name="title_activity_school_menu">Escuela</string>
    <string name="title_activity_type_group">Tipo Grupo</string>
    <string name="title_activity_group">Grupo</string>
    <string name="title_activity_cycle">Ciclo</string>
    <string name="title_about_views"><b>Integrantes:</b></string>
    <string name="text_solicitud_horario">Solicitud de Horario</string>
    <string name="id_solicitud_horario">ID Solicitud de Horario</string>
</resources>