<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/item_one"
            android:icon="@drawable/account"
            android:title="@string/menu_item_one"/>
        <item
            android:id="@+id/item_fourth"
            android:icon="@drawable/book"
            android:title="@string/menu_item_fourth"/>
        <item
            android:id="@+id/item_eight"
            android:icon="@drawable/school"
            android:title="@string/title_activity_school_menu"/>
        <item
            android:id="@+id/item_nine"
            android:icon="@drawable/account_group"
            android:title="@string/title_activity_type_group"/>
        <item
            android:id="@+id/item_ten"
            android:icon="@drawable/group"
            android:title="@string/title_activity_group"/>
        <item
            android:id="@+id/item_six"
            android:icon="@drawable/human_male_board"
            android:title="@string/menu_item_six"/>
        <item
            android:id="@+id/item_seven"
            android:icon="@drawable/innovacion"
            android:title="@string/menu_item_seven"/>
        <item
            android:id="@+id/item_five"
            android:icon="@drawable/call_split"
            android:title="@string/menu_item_five"/>
        <item
            android:id="@+id/item_two"
            android:icon="@drawable/information_outline"
            android:title="@string/menu_item_two"/>
        <item
            android:id="@+id/item_three"
            android:icon="@drawable/logout"
            android:title="@string/menu_item_three"/>
    </group>
</menu>