<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1">

    <TableRow>
        <TextView android:text="@string/seleccine_solicitud_evento"/>
        <Spinner android:id="@+id/spinnerSolicitudEvento"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/id_solicitud_evento_fk"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/seleccine_solicitud_horario"/>
        <Spinner android:id="@+id/spinnerSolicitudHorario"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/id_solicitud_horario_fk"/>
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarHorario"
            android:text="@string/btn_insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/btn_limpiar" />
    </TableRow>


</TableLayout>