<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/id_tipo_evento" />

        <EditText
            android:id="@+id/editIdTipoEvento"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombre_tipo_evento" />
        <EditText
            android:id="@+id/editNombre"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/estado_tipo_evento" />
        <EditText
            android:id="@+id/editEstado"
            android:inputType="text"
            android:maxLength="1" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarTipoEvento"
            android:text="@string/btn_actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/btn_limpiar" />
    </TableRow>
</TableLayout>