<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >

    <TableRow>
        <TextView android:text="@string/nombre_tipo_salon" />
        <EditText
            android:id="@+id/editNombreTipoSalon"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/disponible_tipo_salon" />
        <EditText
            android:id="@+id/editDisponibleTipoSalon"
            android:inputType="text" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/codigo_tipo_salon" />
        <EditText
            android:id="@+id/editCodigoTipoSalon"
            android:inputType="text"
            android:maxLength="8" />
    </TableRow>

    <TableRow>
        <TextView android:text="Opciones" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarTipoSalon"
            android:text="@string/btn_insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/btn_limpiar" />
    </TableRow>
</TableLayout>