<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="30dip"
    android:stretchColumns="1">

    <ImageView
        android:id="@+id/image_tipo_grupo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/title_tipo_grupo_menu"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_tipo_grupo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/menu_item_fourth"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginBottom="50dp"
        android:layout_height="wrap_content"/>

    <TableRow>
        <TextView android:text="@string/id_escuela" />
        <Spinner
            android:id="@+id/spinnerEscuela"
            />
    </TableRow>

    <TableRow
        android:layout_width="399dp"
        android:layout_height="100dp"
        android:layout_weight="1">

        <TextView android:text="@string/nombre_asignatura" />

        <EditText
            android:id="@+id/editNombreAsignatura"
            android:autofillHints=""
            android:inputType="text"
            android:maxLength="25"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </TableRow>

    <TableRow
        android:layout_width="399dp"
        android:layout_height="100dp"
        android:layout_weight="1">

        <TextView android:text="@string/codigo_asignatura" />

        <EditText
            android:id="@+id/editCodigoAsignatura"
            android:autofillHints=""
            android:inputType="text"
            android:maxLength="7"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </TableRow>

    <TableRow
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <Button
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/btn_standard"
            android:onClick="insertar"
            android:text="@string/btn_insertar"
            android:textColor="@color/black" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/btn_standard"
            android:onClick="limpiarTexto"
            android:text="@string/btn_limpiar"
            android:textColor="@color/black"
            tools:ignore="VisualLintButtonSize" />
    </TableRow>
</TableLayout>