<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="30dip"
    android:stretchColumns="1">

    <ImageView
        android:id="@+id/image_escuela"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/school"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/title_escuela_menu"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_escuela"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/title_activity_school_menu"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginBottom="50dp"
        android:layout_height="wrap_content"/>

    <TableRow
        android:layout_width="399dp"
        android:layout_height="100dp"
        android:layout_weight="1">

        <TextView android:text="@string/id_escuela" />

        <EditText
            android:id="@+id/editIdEscuela"
            android:autofillHints=""
            android:inputType="number"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </TableRow>

    <TableRow
        android:layout_width="399dp"
        android:layout_height="100dp"
        android:layout_weight="1">

        <TextView android:text="@string/nombre_escuela" />

        <EditText
            android:id="@+id/editNombre_escuela"
            android:autofillHints=""
            android:inputType="text"
            android:maxLength="25"
            android:clickable="false"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </TableRow>
    <TableRow
        android:layout_width="399dp"
        android:layout_height="100dp"
        android:layout_weight="1">

        <TextView android:text="@string/prioridad_escuela" />

        <EditText
            android:id="@+id/editPrioridad_escuela"
            android:autofillHints=""
            android:inputType="number"
            android:clickable="false"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </TableRow>
    <TableRow
        android:layout_width="399dp"
        android:layout_height="100dp"
        android:layout_weight="1">

        <TextView android:text="@string/estado_escuela" />

        <EditText
            android:id="@+id/editEstadoEscuela"
            android:autofillHints=""
            android:inputType="number"
            android:clickable="false"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </TableRow>
    <TableRow
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <Button
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/btn_standard"
            android:onClick="actualizarEscuela"
            android:text="@string/btn_actualizar"
            android:textColor="@color/black" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/btn_standard"
            android:onClick="limpiarTexto"
            android:text="@string/btn_limpiar"
            android:textColor="@color/black"
            tools:ignore="VisualLintButtonSize" />
    </TableRow>

</TableLayout>