<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="30dip"
    android:stretchColumns="1">

    <ImageView
        android:id="@+id/image_evento"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/call_split"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/consultar_evento"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_tipo_grupo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_title_events"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginBottom="50dp"
        android:layout_height="wrap_content"/>

    <TableRow
        android:layout_width="399dp"
        android:layout_height="100dp"
        android:layout_weight="1">

        <TextView android:text="@string/id_evento" />

        <EditText
            android:id="@+id/editIdEvento"
            android:autofillHints=""
            android:inputType="number"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </TableRow>

    <TableRow
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10px"
        android:paddingStart="10px"
        android:paddingEnd="10px">

        <Button
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/btn_standard"
            android:onClick="consultarEvento"
            android:text="@string/btn_consultar"
            android:textColor="@color/black" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/btn_standard"
            android:onClick="limpiarTexto"
            android:text="@string/btn_limpiar"
            android:textColor="@color/black"
            tools:ignore="VisualLintButtonSize" />
    </TableRow>

    <TableRow
        android:layout_width="399dp"
        android:layout_height="100dp"
        android:layout_weight="1">

        <TextView android:text="@string/nombre_evento" />

        <EditText
            android:id="@+id/editNombreEvento"
            android:autofillHints=""
            android:inputType="text"
            android:maxLength="25"
            android:clickable="false"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </TableRow>
    <TableRow
        android:layout_width="399dp"
        android:layout_height="100dp"
        android:layout_weight="1">

        <TextView android:text="@string/nombre_tipo_evento" />

        <EditText
            android:id="@+id/editTipoEvento"
            android:autofillHints=""
            android:inputType="text"
            android:maxLength="25"
            android:clickable="false"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </TableRow>
    <TableRow
        android:layout_width="399dp"
        android:layout_height="100dp"
        android:layout_weight="1">

        <TextView android:text="@string/estado_evento" />

        <EditText
            android:id="@+id/editEstadoEvento"
            android:autofillHints=""
            android:inputType="number"
            android:clickable="false"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </TableRow>

</TableLayout>